Deliverable3/src/Deliverable3Parser.py
# Generated from Deliverable3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Deliverable3Parser ( Parser ):

    grammarFileName = "Deliverable3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'not'", "'and'", "'or'", "<INVALID>", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'('", "')'", "'['", "']'", "':'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
                      "IN", "NOT", "AND", "OR", "BOOLEAN", "ASSIGN", "PLUSEQ", 
                      "MINUSEQ", "MULEQ", "DIVEQ", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "LT", "LE", "GT", "GE", "EQ", "NEQ", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
                      "COMMA", "NUMBER", "FLOAT", "STRING", "NAME", "NEWLINE", 
                      "MULTILINE_COMMENT", "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_assignment = 3
    RULE_assignment_operations = 4
    RULE_if_statement = 5
    RULE_while_statement = 6
    RULE_for_statement = 7
    RULE_condition_or = 8
    RULE_condition_and = 9
    RULE_condition_not = 10
    RULE_general_condition = 11
    RULE_comparison = 12
    RULE_conditional_operations = 13
    RULE_expr = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_value = 17
    RULE_array = 18

    ruleNames =  [ "prog", "statement", "simple_stmt", "assignment", "assignment_operations", 
                   "if_statement", "while_statement", "for_statement", "condition_or", 
                   "condition_and", "condition_not", "general_condition", 
                   "comparison", "conditional_operations", "expr", "term", 
                   "factor", "value", "array" ]

    EOF = Token.EOF
    IF=1
    ELIF=2
    ELSE=3
    WHILE=4
    FOR=5
    IN=6
    NOT=7
    AND=8
    OR=9
    BOOLEAN=10
    ASSIGN=11
    PLUSEQ=12
    MINUSEQ=13
    MULEQ=14
    DIVEQ=15
    PLUS=16
    MINUS=17
    MUL=18
    DIV=19
    MOD=20
    LT=21
    LE=22
    GT=23
    GE=24
    EQ=25
    NEQ=26
    LPAREN=27
    RPAREN=28
    LBRACKET=29
    RBRACKET=30
    COLON=31
    COMMA=32
    NUMBER=33
    FLOAT=34
    STRING=35
    NAME=36
    NEWLINE=37
    MULTILINE_COMMENT=38
    COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Deliverable3Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Deliverable3Parser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.NEWLINE)
            else:
                return self.getToken(Deliverable3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = Deliverable3Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 129386087474) != 0):
                self.state = 38
                self.statement()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==37:
                    self.state = 39
                    self.match(Deliverable3Parser.NEWLINE)


                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(Deliverable3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(Deliverable3Parser.Simple_stmtContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(Deliverable3Parser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(Deliverable3Parser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(Deliverable3Parser.For_statementContext,0)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Deliverable3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 16, 17, 29, 33, 34, 35, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.simple_stmt()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.if_statement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.while_statement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.for_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(Deliverable3Parser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(Deliverable3Parser.ExprContext,0)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = Deliverable3Parser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Deliverable3Parser.NAME, 0)

        def assignment_operations(self):
            return self.getTypedRuleContext(Deliverable3Parser.Assignment_operationsContext,0)


        def expr(self):
            return self.getTypedRuleContext(Deliverable3Parser.ExprContext,0)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = Deliverable3Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(Deliverable3Parser.NAME)
            self.state = 60
            self.assignment_operations()
            self.state = 61
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(Deliverable3Parser.ASSIGN, 0)

        def PLUSEQ(self):
            return self.getToken(Deliverable3Parser.PLUSEQ, 0)

        def MINUSEQ(self):
            return self.getToken(Deliverable3Parser.MINUSEQ, 0)

        def MULEQ(self):
            return self.getToken(Deliverable3Parser.MULEQ, 0)

        def DIVEQ(self):
            return self.getToken(Deliverable3Parser.DIVEQ, 0)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_assignment_operations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_operations" ):
                listener.enterAssignment_operations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_operations" ):
                listener.exitAssignment_operations(self)




    def assignment_operations(self):

        localctx = Deliverable3Parser.Assignment_operationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment_operations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Deliverable3Parser.IF, 0)

        def condition_or(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable3Parser.Condition_orContext)
            else:
                return self.getTypedRuleContext(Deliverable3Parser.Condition_orContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.COLON)
            else:
                return self.getToken(Deliverable3Parser.COLON, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.NEWLINE)
            else:
                return self.getToken(Deliverable3Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Deliverable3Parser.StatementContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.ELIF)
            else:
                return self.getToken(Deliverable3Parser.ELIF, i)

        def ELSE(self):
            return self.getToken(Deliverable3Parser.ELSE, 0)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = Deliverable3Parser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(Deliverable3Parser.IF)
            self.state = 66
            self.condition_or(0)
            self.state = 67
            self.match(Deliverable3Parser.COLON)
            self.state = 68
            self.match(Deliverable3Parser.NEWLINE)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69
                    self.statement()
                    self.state = 71
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 70
                        self.match(Deliverable3Parser.NEWLINE)

             
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 78
                    self.match(Deliverable3Parser.ELIF)
                    self.state = 79
                    self.condition_or(0)
                    self.state = 80
                    self.match(Deliverable3Parser.COLON)
                    self.state = 81
                    self.match(Deliverable3Parser.NEWLINE)
                    self.state = 88
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 82
                            self.statement()
                            self.state = 84
                            self._errHandler.sync(self)
                            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                            if la_ == 1:
                                self.state = 83
                                self.match(Deliverable3Parser.NEWLINE)

                     
                        self.state = 90
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
             
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 96
                self.match(Deliverable3Parser.ELSE)
                self.state = 97
                self.match(Deliverable3Parser.COLON)
                self.state = 98
                self.match(Deliverable3Parser.NEWLINE)
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 99
                        self.statement()
                        self.state = 101
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                        if la_ == 1:
                            self.state = 100
                            self.match(Deliverable3Parser.NEWLINE)

                 
                    self.state = 107
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(Deliverable3Parser.WHILE, 0)

        def condition_or(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_orContext,0)


        def COLON(self):
            return self.getToken(Deliverable3Parser.COLON, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.NEWLINE)
            else:
                return self.getToken(Deliverable3Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Deliverable3Parser.StatementContext,i)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)




    def while_statement(self):

        localctx = Deliverable3Parser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(Deliverable3Parser.WHILE)
            self.state = 111
            self.condition_or(0)
            self.state = 112
            self.match(Deliverable3Parser.COLON)
            self.state = 113
            self.match(Deliverable3Parser.NEWLINE)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 114
                    self.statement()
                    self.state = 116
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        self.state = 115
                        self.match(Deliverable3Parser.NEWLINE)

             
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(Deliverable3Parser.FOR, 0)

        def NAME(self):
            return self.getToken(Deliverable3Parser.NAME, 0)

        def IN(self):
            return self.getToken(Deliverable3Parser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(Deliverable3Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(Deliverable3Parser.COLON, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Deliverable3Parser.NEWLINE)
            else:
                return self.getToken(Deliverable3Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Deliverable3Parser.StatementContext,i)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)




    def for_statement(self):

        localctx = Deliverable3Parser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(Deliverable3Parser.FOR)
            self.state = 124
            self.match(Deliverable3Parser.NAME)
            self.state = 125
            self.match(Deliverable3Parser.IN)
            self.state = 126
            self.expr()
            self.state = 127
            self.match(Deliverable3Parser.COLON)
            self.state = 128
            self.match(Deliverable3Parser.NEWLINE)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    self.statement()
                    self.state = 131
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        self.state = 130
                        self.match(Deliverable3Parser.NEWLINE)

             
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition_and(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_andContext,0)


        def condition_or(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_orContext,0)


        def OR(self):
            return self.getToken(Deliverable3Parser.OR, 0)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_condition_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_or" ):
                listener.enterCondition_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_or" ):
                listener.exitCondition_or(self)



    def condition_or(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Deliverable3Parser.Condition_orContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_condition_or, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.condition_and(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Deliverable3Parser.Condition_orContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_condition_or)
                    self.state = 141
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 142
                    self.match(Deliverable3Parser.OR)
                    self.state = 143
                    self.condition_and(0) 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Condition_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition_not(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_notContext,0)


        def condition_and(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_andContext,0)


        def AND(self):
            return self.getToken(Deliverable3Parser.AND, 0)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_condition_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_and" ):
                listener.enterCondition_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_and" ):
                listener.exitCondition_and(self)



    def condition_and(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Deliverable3Parser.Condition_andContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_condition_and, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.condition_not()
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Deliverable3Parser.Condition_andContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_condition_and)
                    self.state = 152
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 153
                    self.match(Deliverable3Parser.AND)
                    self.state = 154
                    self.condition_not() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Condition_notContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(Deliverable3Parser.NOT, 0)

        def condition_not(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_notContext,0)


        def general_condition(self):
            return self.getTypedRuleContext(Deliverable3Parser.General_conditionContext,0)


        def getRuleIndex(self):
            return Deliverable3Parser.RULE_condition_not

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_not" ):
                listener.enterCondition_not(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_not" ):
                listener.exitCondition_not(self)




    def condition_not(self):

        localctx = Deliverable3Parser.Condition_notContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition_not)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(Deliverable3Parser.NOT)
                self.state = 161
                self.condition_not()
                pass
            elif token in [10, 16, 17, 27, 29, 33, 34, 35, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.general_condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class General_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(Deliverable3Parser.LPAREN, 0)

        def condition_or(self):
            return self.getTypedRuleContext(Deliverable3Parser.Condition_orContext,0)


        def RPAREN(self):
            return self.getToken(Deliverable3Parser.RPAREN, 0)

        def comparison(self):
            return self.getTypedRuleContext(Deliverable3Parser.ComparisonContext,0)


        def BOOLEAN(self):
            return self.getToken(Deliverable3Parser.BOOLEAN, 0)

        def NAME(self):
            return self.getToken(Deliverable3Parser.NAME, 0)

        def getRuleIndex(self):
            return Deliverable3Parser.RULE_general_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneral_condition" ):
                listener.enterGeneral_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneral_condition" ):
                listener.exitGeneral_condition(self)




    def general_condition(self):

        localctx = Deliverable3Parser.General_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_general_condition)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(Deliverable3Parser.LPAREN)
                self.state = 166
                self.condition_or(0)
                self.state = 167
                self.match(Deliverable3Parser.RPAREN)
                pass
